recursion.logo.lessons.recursion.logo.spiral.Spiral.scala.error
Spiral:8: error: not found: value spirale
  spirale(steps-1,angle,length + increment, increment)
  ^